--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
+    "body-parser": "^1.20.2",
     "cloudinary": "^1.23.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
