--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ PORT=4000
 DATABASE_NAME=myhome
 DB_PORT=27017
 UPLOAD_DIR= imagenes/
-#CLOUDINARY_NAME='de7zrcqyz'
-#CLOUDINARY_API_KEY='114862491191135'
-#CLOUDINARY_API_SECRET='lQ7HA9Yh9kJiPHhC6Eef_zowfGo'
+CLOUDINARY_NAME='djctgax71'
+CLOUDINARY_API_KEY='413874144478367'
+CLOUDINARY_API_SECRET='5isgtMWT0SMuPHWIpExrmmrnXEA'
 EMAIL_ADRESS='uadedist2023@outlook.com'
 EMAIL_PASSWORD='UadeGrupo8'
